--- a/circle.css
+++ b/circle.css
@@ -1,3 +1,5 @@
+/* beginning of login webpage */ 
+
 body { 
 	margin: 0;
 	padding: 0;
@@ -33,7 +35,7 @@ body {
 	height: 20px;
 	text-decoration: none;
 	color: initial;
-	font-family: calibri;
+	font-family:calibri;
 }
 			
 #LoginTable {
@@ -41,10 +43,68 @@ body {
 	left: 40%;
 	top: 100px;
 	margin-top: 100px;
+	
 }
 
-#topRight {
+/* beginning of the circle gui webpage */ 
+
+#topLeft {
 	position:absolute;
-	left: 100px;
-	bottom: 100px;
+	margin-top:300px;
+	margin-left: 250px;
+}
+
+#topRight{
+	position:absolute;
+	margin-top: 300px;
+	margin-left: 450px;
+}
+
+#bottomLeft {
+	position:absolute;
+	margin-top: 500px;
+	margin-left:250px;
+}
+
+#bottomRight {
+	position:absolute;
+	margin-top:500px;
+	margin-left:450px;
+}
+
+p {
+	font-family:Calibri;
+	font-size:10pt;
+}
+
+#db1
+{
+	margin-top:350px;
+	position:absolute;
+	margin-left:230px;
+	font-size:20pt;
+}
+
+#db2 {
+	
+	margin-top:350px;
+	position:absolute;
+	margin-left:600px;
+	font-size:20pt;
+	
+}
+
+#db3 {
+	
+	margin-top:600px;
+	position:absolute;
+	margin-left:220px;
+	font-size:20pt;
+}
+
+#db4 {
+	margin-top:600px;
+	position:absolute;
+	margin-left:620px;
+	font-size:20pt;
 }
