--- a/Master/HTML Files/CSS_Files/circle.css
+++ b/Master/HTML Files/CSS_Files/circle.css
@@ -108,7 +108,6 @@ p {
 	position:absolute;
 	margin-left:1290px;
 	font-size:20pt;
-<<<<<<< HEAD
 	font-family: Calibri;
 }
 
@@ -116,6 +115,10 @@ div {
 	position: absolute;
 	right: 38px;
 	top: 0px;
-=======
->>>>>>> 2b60433848a6e57be9be0882c161d4e3d84ddf13
+	margin-left:900px;
+}
+
+.buttons {
+	background-color: #39286C;
+	font-family: Calibri;
 }
