added logo to the centre of the cirle GUI

--- a/Master/HTML Files/CSS_Files/DBScreen.css
+++ b/Master/HTML Files/CSS_Files/DBScreen.css
@@ -26,12 +26,13 @@ p {
 	
 	border: solid 4px #39286C;
 	border-collapse: collapse;
-	
-	
 }
 
 fontColor {
 	color :White;
+}
 
-	
+#print {
+	position:absolute;
+	top:5000px;
 }
