--- a/Master/HTML Files/CSS_Files/DBScreen.css
+++ b/Master/HTML Files/CSS_Files/DBScreen.css
@@ -36,3 +36,9 @@ fontColor {
 	position:absolute;
 	top:5000px;
 }
+.test {
+	width:100px;
+	height:100px;
+	background-color: cyan;
+	border-radius: 5px;
+}
