--- a/Master/HTML Files/CSS_Files/DatabaseSelection.css
+++ b/Master/HTML Files/CSS_Files/DatabaseSelection.css
@@ -109,7 +109,7 @@
     width: 100px;
     padding-left:75px;
     margin-left:150px;
-    padding-top: 12px;
+    padding-top: 5px;
     
     
 
@@ -121,7 +121,13 @@
 #arrow{
     
     margin-left: 180px;
-    width:30px;
+    width:0px;
+    position: absolute;
     
 }
 
+#box{
+    color: red;
+    
+    
+}
