--- a/Master/HTML Files/CSS_Files/DatabaseSelection.css
+++ b/Master/HTML Files/CSS_Files/DatabaseSelection.css
@@ -1,8 +1,6 @@
 
 #profile {
      background-color: #39286C;
-     height:40;
-     width: 40;
      text-align: center;
      position:absolute;
      right:0px;
@@ -37,7 +35,7 @@
 
 #sideMenu {
     border: solid 2px#CCCCCC;
-    height:783px;
+    height:100%;
     width:160px;
     position:absolute;
     background-color: #CCCCCC;
@@ -93,12 +91,6 @@
     
 }
 
-#Overlay2 {
-    position:absolute;
-    height:700px;
-    width:700px;
-   z-index: -1;
-}
 
 .ALL{
     font-family: Calibri;
@@ -111,7 +103,8 @@
     padding-left:75px;
     margin-left:160px;
     padding-top: 5px;
-    
+    margin-top: 45px
+
     
 
 }
@@ -122,20 +115,21 @@
 #arrow{
     
     
-    position: relative;
+    
     background-color:#39286C; 
     width: 40px;
     height:40px;
-    margin-top: -35px;
-    margin-left: 300px;
+    margin-top: -40px;
+    margin-left: 290px;
     height: 30px;
+    
     
     
     
 }
 
 #box{
-    position: relative;
+    position: absolute;
     background-color:#39286C; 
     width: 501px;
     height:30px;
@@ -154,13 +148,28 @@
     background-color: white;
     border-style: solid;
     border-color:#39286C;
+    border-width: 4px;
     background-color: white;
     width:2000px;
-    height:32px;
-    margin-top: -35px;
-    margin-left: 330px;
+    height:33px;
+    margin-top: -30px;
+    margin-left: 335.5px;
+    position: absolute;
     
     
+    
+    
+}
+
+
+#aboveALL{
+    font-family: Calibri;
+    position: absolute;
+    margin-top: -75px;
+    margin-left: 161px;
+    height: 43px;
+    width: 5000px;
+    background-color: white;
     
     
 }
