--- a/Master/HTML Files/CSS_Files/databaseTemplateNew.css
+++ b/Master/HTML Files/CSS_Files/databaseTemplateNew.css
@@ -6,7 +6,7 @@
     font-family: Calibri;
     background-color:#39286C;
     color:white;
-    padding-top:45px;
+    padding-top:10px;
     padding-left:30px;
     position:fixed;
     top:0;
@@ -17,10 +17,10 @@
 
 #printButton{
     position: fixed;
-    width:100px;
-    height: 100px;
-    bottom:50px;
-    left:0px;
+    width:160px;
+    height: 160px;
+    bottom:150px;
+    left: -5px;
     z-index: 1;
     margin-left: 25px;
 }
@@ -28,20 +28,20 @@
 #sideMenuBacking{
     border: solid 2px#CCCCCC;
     height:100%;
-    width:160px;
+    width:200px;
     position:fixed;
     background-color: #CCCCCC;
-    margin-top:126px;
+    margin-top:91px;
     left:0px;
-    z-index: 0;
+    z-index: -3;
 }
 
 #addButton{
     
-    width:100px;
-    height:30px;
-    bottom:160px;
-    left: 25px;
+    width:160px;
+    height: 50px;
+    bottom:320px;
+    left: 20px;
     background-color: #39286C; 
     position: fixed;
     text-align: center;
@@ -52,7 +52,7 @@
     border : none;
     position:fixed;
     z-index: 4;
-    margin-left: 50px;
+    margin-left: 87%;
     margin-top: 0%;
     background-color: #39286C;
 }
@@ -70,4 +70,63 @@
     background-color: none; 
     
 
+}
+
+#searchBar{
+    border : solid; 
+    background-color: white;
+    border-color: #39286C;
+    height: 35px;
+    width: 80%;
+    margin-top: 150px;
+    position:fixed;
+    margin-left: 325px;
+
+   
+}
+
+
+#dropDown_text {
+    color:white;
+    font-weight: bold;
+    text-align: center;
+    position:fu;
+}
+
+.sideMenuButtons {
+    background-color: #CCCCCC;
+    height: 50px;
+    width: 180px;
+    font-family: Calibri;
+    font-size: 20px;
+    border-left: solid #39286C 5px;
+    padding-left: 5px;
+    padding-top:40px;
+    z-index:20;
+    margin-top:150px;
+    position: fixed;
+   
+  
+    
+}
+
+.sideMenuButtons:hover {
+    border-left: solid 5px #23BFD2
+}
+
+#appointments{
+    margin-top: 290px;
+}
+
+#id2{
+    margin-top:420px;
+}
+
+#textAboveAll{
+    font-family: Calibri;
+    padding-left: 5px;
+    border-color: red;
+    border:solid;
+    height: 10px;
+    width: 10px;
 }
