--- a/Master/HTML Files/CSS_Files/databaseTemplateNew.css
+++ b/Master/HTML Files/CSS_Files/databaseTemplateNew.css
@@ -1,11 +1,7 @@
-
-#printButton {
-
-}
 #mainTitle{
     
     width:100%;
-    height:100px;
+    height:90px;
     font-size:35pt;
     font-family: Calibri;
     background-color:#39286C;
@@ -20,30 +16,13 @@
 }
 
 #printButton{
-
     position: fixed;
     width:160px;
     height: 160px;
     bottom:150px;
     left: -5px;
     z-index: 1;
-
-}
-
-#dropdown {
-    border: solid #39286C 3px;
-    width:125px;
-    height:30px;
-    background-color: #39286C;
-    
-    
-}
-
-#dropDown_text {
-    color:white;
-    position:fixed;
-    top:100px;
-    
+    margin-left: 25px;
 }
 
 #sideMenuBacking{
@@ -66,7 +45,6 @@
     background-color: #39286C; 
     position: fixed;
     text-align: center;
-
     
 }
 
@@ -146,9 +124,16 @@
 
 #textAboveAll{
     font-family: Calibri;
+    font-size: 20px;
     padding-left: 5px;
-    border-color: red;
-    border:solid;
-    height: 10px;
-    width: 10px;
+    height: 34px;
+    width: 83%;
+    position:fixed;
+    margin-top: 92px;
+    padding-left: 50px;
+    margin-left: 193px;
+    padding-top: 19px;
+    font-weight: bold;
+    position: fixed;
+    
 }
