--- a/Master/HTML Files/CSS_Files/databaseTemplateNew.css
+++ b/Master/HTML Files/CSS_Files/databaseTemplateNew.css
@@ -39,12 +39,13 @@
 #addButton{
     
     width:160px;
-    height: 50px;
+    height: 40px;
     bottom:320px;
     left: 20px;
     background-color: #39286C; 
     position: fixed;
     text-align: center;
+    padding-top: 10px;
     
 }
 
@@ -80,7 +81,7 @@
     width: 80%;
     margin-top: 150px;
     position:fixed;
-    margin-left: 325px;
+    margin-left: 395px;
 
    
 }
@@ -135,5 +136,57 @@
     padding-top: 19px;
     font-weight: bold;
     position: fixed;
+    
+}
+/* -------------------------------- */
+
+.buttons {
+    position:fixed;
+    top:950px;
+    left:650px;
+    background-color: #39286C;
+    position: fixed;
+ 
+}
+
+#first {
+    left:700px;
+}
+
+#previous {
+    left:750px;
+    
+}
+
+#next {
+    left:1450px;
+}
+
+#last {
+    left:1500px;
+}
+
+#pageIndicator {
+    border: solid #39286C 5px;
+    background-color: white;
+    position:fixed;
+    top:935px;
+    left:800px;
+    width:630px;
+    padding-bottom: 5px;
+    padding-top:5px;
+    text-align: center
+}
+
+#dropDown {
+    position: fixed;
+    top: 158px;
+    left:206px;
+    height:42px;
+    width: 195px;
+    background-color: #39286C;
+    color:white;
+    font-weight: bold;
+    padding-left:85px;
     
 }
